--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   shared_preferences: ^2.2.2
+  bcrypt: ^1.1.3
+  sqflite: ^2.3.2
+  path_provider: ^2.1.2
 
 
 dev_dependencies:
