--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   path_provider: ^2.1.2
   fluttertoast: ^8.2.4
   intl: ^0.19.0
+  fl_chart: ^0.35.0
+  carousel_slider: ^4.2.1
+  path: ^1.8.3
+  
 
 
 dev_dependencies:
